Implement all solvers

--- a/src/style.css
+++ b/src/style.css
@@ -91,3 +91,13 @@ button:not(:disabled):active {
 button:focus {
   border-color: #666;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
